--- a/front/src/components/Topbar/topbar.scss
+++ b/front/src/components/Topbar/topbar.scss
@@ -1,9 +1,81 @@
 .topbar {
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 32px;
-    position: absolute;
-    box-sizing: border-box;
-    background-color: rgba(255, 255, 255);
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 32px;
+  position: absolute;
+  box-sizing: border-box;
+  background-color: rgba(255, 255, 255, 0.2);
+  -webkit-backdrop-filter: blur(50px);
+  backdrop-filter: blur(50px);
+  color: white;
+  text-shadow: 0px 0px 8px black;
+  &,
+  nav,
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
+  nav {
+    display: flex;
+    align-items: center;
+    .logo {
+      margin: 0 16px;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      border: 4px inset white;
+      box-sizing: border-box;
+    }
+    > * {
+      margin: 0 0 2px;
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 100%;
+      cursor: pointer;
+      &:not(:last-child) {
+        margin-right: 16px;
+      }
+    }
+    h1 {
+      font-weight: 400;
+    }
+  }
+  header {
+    padding-right: 16px;
+    box-sizing: border-box;
+    height: 100%;
+    color: white;
+    > * {
+      cursor: pointer;
+      padding: 0 8px;
+      height: 100%;
+      box-sizing: border-box;
+      filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
+      -webkit-filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
+      &:active {
+        background-color: rgba(0, 0, 0, 0.15);
+      }
+    }
+    svg {
+      padding: 4px 8px;
+      box-sizing: content-box;
+      width: 24px;
+      height: 24px;
+      margin-right: 8px;
+    }
+    .date {
+      border: none;
+      outline: none;
+      &:not(:active) {
+        background-color: transparent;
+      }
+      color: white;
+      font-size: 16px;
+      line-height: 100%;
+      font-weight: 400;
+      font-family: "Arial";
+    }
+  }
+}
