system actions + windows + ui look improvements

--- a/front/src/components/Resizable/resizable.scss
+++ b/front/src/components/Resizable/resizable.scss
@@ -1,5 +1,5 @@
 .resizable{
-    position: relative;
+    position: absolute;
     .resizable-border{
         position: absolute;
         background: none;
