--- a/front/src/components/AppItem/appItem.scss
+++ b/front/src/components/AppItem/appItem.scss
@@ -1,21 +1,36 @@
 .app-item {
     aspect-ratio: 1;
-    width: 64px;
-    height: 64px;
+    width: 48px;
+    height: 48px;
     background-color: white;
     background-position: center;
     background-repeat: no-repeat;
-    border-radius: 16px;
+    border-radius: 10px;
     cursor: pointer;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     &.active::after {
         content: "";
-        background-color: rgb(32, 32, 32, 0.5);
-        width: 6px;
-        height: 6px;
+        background-color: rgba(226, 226, 226, 0.75);
+        // background-color: rgb(32, 32, 32, 0.5);
+        width: 4px;
+        height: 4px;
         border-radius: 50%;
         position: absolute;
-        bottom: -10px;
-        left: calc(50% - 3px);
+        bottom: -14px;
+        left: calc(50% - 2px);
+    }
+    &:hover::before {
+        content: var(--app_name, "helloWorld");
+        background-color: rgb(255, 255, 255, 0.2);
+        // background-color: rgb(32, 32, 32, 0.5);
+        border-radius: 4px;
+        position: relative;
+        top: -64px;
+        padding: 4px 8px;
+        color: #f2f2f2;
     }
 }
