--- a/front/src/components/Topbar/topbar.scss
+++ b/front/src/components/Topbar/topbar.scss
@@ -2,44 +2,64 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 32px;
+  height: 28px;
   position: absolute;
   box-sizing: border-box;
   background-color: rgba(255, 255, 255, 0.2);
   -webkit-backdrop-filter: blur(50px);
   backdrop-filter: blur(50px);
-  color: white;
-  text-shadow: 0px 0px 8px black;
+  color: #f2f1f2;
+  text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
+  user-select: none;
+  font-family: var(--sf);
   &,
   nav,
   header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
   }
   nav {
     display: flex;
     align-items: center;
     .logo {
-      margin: 0 16px;
+      margin: 0 4px 0 16px;
       width: 16px;
       height: 16px;
       border-radius: 50%;
       border: 4px inset white;
       box-sizing: border-box;
     }
-    > * {
-      margin: 0 0 2px;
-      font-size: 16px;
-      font-weight: 300;
-      line-height: 100%;
+    > *:not(.logo) {
+      margin: 0;
+      // font-size: 16px;
+      // font-weight: 300;
+      // line-height: 100%;
+      padding: 0 14px;
+      border-radius: 4px;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      line-height: 146%;
       cursor: pointer;
+      letter-spacing: 0.05em;
       &:not(:last-child) {
-        margin-right: 16px;
+        margin-right: -10px;
       }
     }
     h1 {
+      font-weight: 700;
+      font-size: 14px;
+    }
+    h4 {
       font-weight: 400;
+      font-size: 14px;
+    }
+    &.focused {
+      > *:hover {
+        background-color: rgba(255, 255, 255, 0.2);
+      }
     }
   }
   header {
@@ -52,8 +72,8 @@
       padding: 0 8px;
       height: 100%;
       box-sizing: border-box;
-      filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
-      -webkit-filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
+      filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.2));
+      -webkit-filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.2));
       &:active {
         background-color: rgba(0, 0, 0, 0.15);
       }
@@ -61,17 +81,18 @@
     svg {
       padding: 4px 8px;
       box-sizing: content-box;
-      width: 24px;
-      height: 24px;
+      width: 20px;
+      height: 20px;
       margin-right: 8px;
     }
     .date {
       border: none;
       outline: none;
+      font-family: var(--sf);
       &:not(:active) {
         background-color: transparent;
       }
-      color: white;
+      color: #f2f1f2;
       font-size: 16px;
       line-height: 100%;
       font-weight: 400;
