--- a/front/src/components/Window/window.scss
+++ b/front/src/components/Window/window.scss
@@ -7,7 +7,7 @@
     overflow: hidden;
     border-radius: 12px;
     background-color: #fcfafc;
-    position: absolute;
+    position: fixed;
     box-shadow: 0px 12px 30px rgba(0, 0, 0, 0.25);
     .window-head {
         height: 44px;
