--- a/front/src/index.css
+++ b/front/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --sf: 'Roboto', sans-serif;
 }
 
 code {
