--- a/front/src/components/Window/window.scss
+++ b/front/src/components/Window/window.scss
@@ -9,8 +9,9 @@
     background-color: #fcfafc;
     position: fixed;
     box-shadow: 0px 12px 30px rgba(0, 0, 0, 0.25);
+    z-index: 2;
     .window-head {
-        height: 44px;
+        min-height: 28px;
         align-items: center;
         padding: 8px 24px;
         box-sizing: border-box;
@@ -48,6 +49,9 @@
         .window-action {
             background-color: green;
             width: 100%;
+        }
+        &.mobile{
+            height: 0;
         }
     }
 }
