--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,14 +1,26 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  --sf: 'Roboto', sans-serif;
+  --sf: "Roboto", sans-serif;
+  --window-transition-duration: .4s;
+  --blue: #0070c9;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.box-1 {
+  box-sizing: border-box;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  background-color: rgb(255, 255, 255, 0.2);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+  border: 1px inset rgb(255, 255, 255, 0.2);
+  /* outline: 1px solid rgb(0, 0, 0, 0.2); */
 }
