--- a/front/src/components/Window/window.scss
+++ b/front/src/components/Window/window.scss
@@ -4,12 +4,12 @@
     align-items: stretch;
     min-width: 100px;
     min-height: 100px;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
     border-radius: 12px;
     background-color: #fcfafc;
-    position: fixed;
     box-shadow: 0px 12px 30px rgba(0, 0, 0, 0.25);
-    z-index: 2;
     .window-head {
         min-height: 28px;
         align-items: center;
