--- a/front/src/views/Finder/Finder.scss
+++ b/front/src/views/Finder/Finder.scss
@@ -9,11 +9,13 @@
         flex-shrink: 0;
         padding: 24px 8px 16px 24px;
         box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
         .buttons {
             align-items: center;
             display: flex;
             width: min-content;
-            margin: 0 0 16px;
+            margin: 0 0 8px;
             > div {
                 width: 13px;
                 height: 13px;
@@ -34,32 +36,55 @@
                 }
             }
         }
-        > h4 {
-            font-family: var(--sf);
-            color: #4c4c4c;
-            font-weight: 600;
-            font-size: 12px;
-            opacity: .7;
-            margin: 20px 0 0;
-        }
-        .bookmark{
-            display: flex;
-            align-items: center;    
-            > :first-child{
-                width: 14px;
-                height: 14px;
-                margin-right: 3px;
-            }
-            span {
-                color: #333333;
+        .bookmark-group {
+            > h4 {
+                font-family: var(--sf);
+                color: #4c4c4c;
                 font-weight: 600;
-                font-size: 14px;
+                font-size: 12px;
+                opacity: 0.7;
+                margin: 20px 0 6px;
+                cursor: default;
+            }
+            .bookmark {
+                font-family: var(--sf);
+                width: 100%;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                border-radius: 4px;
+                margin-bottom: 7px;
+                margin-right: 8px;
+                outline: none;
+                border: none;
+                box-sizing: border-box;
+                > :first-child {
+                    width: 16px;
+                    height: 16px;
+                    margin-right: 8px;
+                }
+                span {
+                    color: #2e2e2e;
+                    font-weight: 400;
+                    font-size: 15px;
+                }
+                &:hover {
+                    margin: -5px 8px 3px -8px;
+                    padding: 6px 0 5px 12px;
+                    background-color: rgba(99, 99, 99, 0.1);
+                }
+                &.active,
+                &:active {
+                    margin: -5px 8px 3px -8px;
+                    padding: 6px 0 5px 12px;
+                    background-color: rgba(0, 0, 0, 0.3);
+                }
             }
         }
     }
     .finder-main {
         width: 100%;
         height: 100%;
-        background-color: blue;
+        background-color: white;
     }
 }
