--- a/front/src/views/Finder/Finder.scss
+++ b/front/src/views/Finder/Finder.scss
@@ -1,6 +1,6 @@
 .finder {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     .finder-left-bar {
         background-color: #e8e8e8;
         width: 200px;
@@ -86,5 +86,6 @@
         width: 100%;
         height: 100%;
         background-color: white;
+        box-shadow: 0px 0px 6px rgba(0,0,0,.1);
     }
 }
