--- a/front/src/components/Resizable/resizable.scss
+++ b/front/src/components/Resizable/resizable.scss
@@ -5,29 +5,36 @@
     transition-timing-function: linear;
     position: fixed;
     z-index: 2;
+    background-color: #fcfafc;
+    border-radius: 12px;
     .resizable-border{
         position: absolute;
         background: none;
         // background-color: rgba(255, 0, 0, 0.5);
         cursor: ew-resize;
         &:first-child{
-            left: 0;
+            left: -10px;
             top:0;
             height: 100%;
-            width: 5px;
+            width: 20px;
         }
         &:nth-child(2){
-            right: 0;
+            right: -10px;
             top:0;
             height: 100%;
-            width: 5px;
+            width: 20px;
         }
         &:nth-child(3){
             cursor: ns-resize;
-            left: 0;
+            left: -10px;
             bottom:0;
             width: 100%;
-            height: 5px;
+            height: 20px;
         }
+    }
+    >:not(.resizable-border){
+        overflow: hidden;
+        max-width: 100%;
+        max-height: 100%;
     }
 }
