--- a/front/src/components/DesktopItem/desktopItem.scss
+++ b/front/src/components/DesktopItem/desktopItem.scss
@@ -4,20 +4,22 @@
     margin: -8px -20px;
     user-select: none;
     border-radius: 12px;
-    box-sizing: border-box;
+    box-sizing: content-box;
     display: flex;
     flex-direction: column;
     align-items: center;
-    > img {
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-        width: 80px;
-        height: 80px;
-        aspect-ratio: 1;
-    }
+    user-select: none;
+    width: 80px;
+    height: 80px;
+    background-size: 80px;
+    background-repeat: no-repeat;
+    background-position: top;
+    // > img {
+    //     user-select: none;
+    //     aspect-ratio: 1;
+    // }
     h6 {
-        margin: 0 0 0;
+        margin: 80px 0 0;
         text-align: center;
         color: #f2f2f2;
         font-family: var(--sf);
