--- a/front/src/components/DesktopItem/desktopItem.scss
+++ b/front/src/components/DesktopItem/desktopItem.scss
@@ -9,17 +9,16 @@
     flex-direction: column;
     align-items: center;
     user-select: none;
-    width: 80px;
-    height: 80px;
-    background-size: 80px;
-    background-repeat: no-repeat;
-    background-position: top;
-    // > img {
-    //     user-select: none;
-    //     aspect-ratio: 1;
-    // }
+    > div {
+        background-size: 80px;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 80px;
+        height: 80px;
+        aspect-ratio: 1;
+    }
     h6 {
-        margin: 80px 0 0;
+        margin: 0 0 0;
         text-align: center;
         color: #f2f2f2;
         font-family: var(--sf);
