GH-1 add sessionStorage logic for loading + start login/signin screen

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -8,6 +8,7 @@ body {
   --sf: "Roboto", sans-serif;
   /* --window-transition-duration: .1s; */
   --blue: #0070c9;
+  --roboto: "Roboto", sans-serif;
 }
 
 code {
